--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 <!-- The News Section -->
 <div class="w3-container w3-light-grey w3-padding-32" id="news">
   <h2>News</h2>
+    <p><li> Sep.24.2025: Honored to receive the Outstanding Teaching Assistant Award on Spring 2025! </li>
+    <p><li> Sep.22.2025: Two papers (causality for personality analysis and OpenReview system) were accepted by NeurIPS 2025 Workshops!</li></p>
+    <p><li> Sep.18.2025: One paper (causality for gene regulatory network) was accepted by NeurIPS 2025!</li></p>
     <p><li> May.20.2025: I will join <a href="https://genbio.ai/">GenBio</a> as a summer intern, focusing on foundation models pre-training for biology!</li></p>
     <p><li> May.01.2025: One paper about LLM text generation was accepted by ICML 2025!</li></p>
     <p><li> Jan.28.2025: I gave an invited talk at Abu Dhabi Investment Authority (ADIA) Lab Seminar. (<a href="https://www.linkedin.com/posts/adia-lab_we-are-pleased-to-announce-the-launch-of-activity-7287801212756750339-ro0W?utm_source=social_share_sheet&utm_medium=member_desktop_web">Link</a>)</li>
@@ -119,21 +122,38 @@
     </p> -->
 
     <ul>
+
+      <p>
+      <li><a href="https://arxiv.org/abs/2509.11362">PersonaX: Multimodal Datasets with LLM-Inferred Behavior Traits</a>
+        <br>
+        <strong>Loka Li*</strong>, Wong Yu Kang*, Minghao Fu, Guangyi Chen, Zhenhao Chen, Gongxu Luo, Yuewen Sun, Salman Khan, Peter Spirtes, Kun Zhang.
+        <br>
+        <em>NeurIPS Workshop on Multimodal Algorithmic Reasoning, 2025.</em>
+      </p>
+
+      <p>
+      <li><a href="">How Effective is Your Rebuttal? Identifying Causal Models from the OpenReview System</a>
+        <br>
+        <strong>Loka Li*</strong>, Ibrahim Aldarmaki*, Minghao Fu, Wong Yu Kang, Yunlong Deng, Qiang Huang, Jing Yang, Jin Tian, Guangyi Chen, Kun Zhang.
+        <br>
+        <em>NeurIPS Workshop on CauScien: Uncovering Causality in Science, 2025.</em>
+      </p>
+
+      <p>
+        <li><a href="https://arxiv.org/abs/2501.10124">Gene Regulatory Network Inference in the Presence of Selection Bias and Latent Confounders</a> 
+        <br>
+        Gongxu Luo, Haoyue Dai, <strong>Loka Li</strong>, Chengqian Gap, Boyang Sun, Kun Zhang.
+        <br>
+        <em>Conference on Neural Information Processing Systems (NeurIPS), 2025.</em>
+        </li>
+      </p>
+
       <p>
         <li><a href="https://arxiv.org/abs/2410.23862">ψDAG: Projected Stochastic Approximation Iteration for DAG Structure Learning</a>
           <br>
           Klea Ziu, Slavomír Hanzely, <strong>Loka Li</strong>, Kun Zhang, Martin Takáč, Dmitry Kamzolov
           <br>
           <em>arXiv, 2024.</em> 
-        </li>
-      </p>
-
-      <p>
-        <li><a href="https://arxiv.org/abs/2501.10124">Gene Regulatory Network Inference in the Presence of Selection Bias and Latent Confounders</a> 
-        <br>
-        Gongxu Luo, Haoyue Dai, Boyang Sun, <strong>Loka Li</strong>, Biwei Huang, Petar Stojanov, Kun Zhang
-        <br>
-        <em>arXiv, 2024.</em>
         </li>
       </p>
 
@@ -247,6 +267,7 @@
       <p><li>International Conference on Machine Learning (ICML)</li></p>
       <p><li>Conference on Neural Information Processing Systems (NeurIPS)</li></p>
       <p><li>International Conference on Learning Representations (ICLR)</li></p>
+      <p><li>Association for the Advancement of Artificial Intelligence Conference (AAAI)</li></p>
       <p><li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li></p> 
       <p><li>International Conference on Data Mining (ICDM)</li></p>
       <p><li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS).</li></p>
@@ -255,10 +276,10 @@
 
     - Serving as a teaching assistant for the courses, including:
     <ul>
-      <p><li> 2024/2025 Spring: ML808-Advanced Topics in Causality and Machine Learning. (Instructor: Prof. Jin Tian.)</li></p>
-      <p><li> 2024/2025 Fall: ML801-Foundations and Advanced Topics in Machine Learning. (Instructor: Prof. Tongliang Liu.)</li></p>
-      <p><li> 2023/2024 Spring: ML802-Advanced Machine Learning. (Instructor: Prof. Tongliang Liu.)</li></p>
-      <p><li> 2023/2024 Fall: ML803-Advanced Probabilistic and Statistical Inference. (Instructor: Prof. Kun Zhang.)</li></p>
+      <p><li> 2024/2025 Spring: ML808-Advanced Topics in Causality and Machine Learning. (Instructor: Prof. Jin Tian)</li></p>
+      <p><li> 2024/2025 Fall: ML801-Foundations and Advanced Topics in Machine Learning. (Instructor: Prof. Tongliang Liu)</li></p>
+      <p><li> 2023/2024 Spring: ML802-Advanced Machine Learning. (Instructor: Prof. Tongliang Liu)</li></p>
+      <p><li> 2023/2024 Fall: ML803-Advanced Probabilistic and Statistical Inference. (Instructor: Prof. Kun Zhang)</li></p>
     </ul>
   </div> 
 
