upadtes on Jan 2026

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <!-- The News Section -->
 <div class="w3-container w3-light-grey w3-padding-32" id="news">
   <h2>News</h2>
+    <p><li> Jan.26.2026: Two papers were accepted by ICLR 2026! </li></p>
     <p><li> Sep.24.2025: Honored to receive the Outstanding Teaching Assistant Award on Spring 2025! </li>
     <p><li> Sep.22.2025: Two papers (causality for personality analysis and OpenReview system) were accepted by NeurIPS 2025 Workshops!</li></p>
     <p><li> Sep.18.2025: One paper (causality for gene regulatory network) was accepted by NeurIPS 2025!</li></p>
@@ -128,11 +129,27 @@
         <br>
         <strong>Loka Li*</strong>, Wong Yu Kang*, Minghao Fu, Guangyi Chen, Zhenhao Chen, Gongxu Luo, Yuewen Sun, Salman Khan, Peter Spirtes, Kun Zhang.
         <br>
-        <em>NeurIPS Workshop on Multimodal Algorithmic Reasoning, 2025.</em>
+        <em>International Conference on Learning Representations (ICLR), 2026.</em>
       </p>
 
       <p>
-      <li><a href="">How Effective is Your Rebuttal? Identifying Causal Models from the OpenReview System</a>
+      <li><a href="https://arxiv.org/abs/2509.25800">Characterization and Learning of Causal Graphs with Latent Confounders and Post-treatment Selection from Interventional Data</a>
+        <br>
+        Gongxu Luo, <strong>Loka Li</strong>, Guangyi Chen, Haoyue Dai, Kun Zhang.
+        <br>
+        <em>International Conference on Learning Representations (ICLR), 2026.</em>
+      </p>
+
+      <p>
+      <li><a href="https://arxiv.org/abs/2512.20237">Mem$R^3$: Memory Retrieval via Reflective Reasoning for LLM Agents</a>
+        <br>
+        Xingbo Du, <strong>Loka Li</strong>, Duzhen Zhang, Le Song.
+        <br>
+        <em>arXiv, 2025.</em>
+      </p>
+
+      <p>
+      <li><a href="https://openreview.net/forum?id=NM6Vv15FoJ">How Effective is Your Rebuttal? Identifying Causal Models from the OpenReview System</a>
         <br>
         <strong>Loka Li*</strong>, Ibrahim Aldarmaki*, Minghao Fu, Wong Yu Kang, Yunlong Deng, Qiang Huang, Jing Yang, Jin Tian, Guangyi Chen, Kun Zhang.
         <br>
@@ -270,6 +287,7 @@
       <p><li>Association for the Advancement of Artificial Intelligence Conference (AAAI)</li></p>
       <p><li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li></p> 
       <p><li>International Conference on Data Mining (ICDM)</li></p>
+      <p><li>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).</li></p>
       <p><li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS).</li></p>
       <!-- <p><li> Neural Networks (NN).</li></p> -->
     </ul>
