upadtes on Jan 2026

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </p>
 
       <p>
-      <li><a href="https://arxiv.org/abs/2512.20237">Mem$R^3$: Memory Retrieval via Reflective Reasoning for LLM Agents</a>
+      <li><a href="https://arxiv.org/abs/2512.20237">MemR3: Memory Retrieval via Reflective Reasoning for LLM Agents</a>
         <br>
         Xingbo Du, <strong>Loka Li</strong>, Duzhen Zhang, Le Song.
         <br>
