upadtes on Jan 2026

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <br>
         <strong>Loka Li*</strong>, Ibrahim Aldarmaki*, Minghao Fu, Wong Yu Kang, Yunlong Deng, Qiang Huang, Jing Yang, Jin Tian, Guangyi Chen, Kun Zhang.
         <br>
-        <em>NeurIPS Workshop on CauScien: Uncovering Causality in Science, 2025.</em>
+        <em>Conference on Neural Information Processing Systems (NeurIPS) Workshop on CauScien: Uncovering Causality in Science, 2025.</em>
       </p>
 
       <p>
