--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p class="w3-center">
           <a style="color:#e77007" href="https://scholar.google.com/citations?user=PT5AMzgAAAAJ&hl=zh-CN"><strong>Google Scholar</strong></a> &nbsp|&nbsp
           <a style="color:#e77007" href="https://github.com/lokali"><strong>Github</strong></a> &nbsp|&nbsp
-          <a style="color:#e77007" href="https://x.com/Loka_L_Li"><strong>X</strong></a> &nbsp|&nbsp
+          <a style="color:#e77007" href="https://x.com/loka_lk_li"><strong>X</strong></a> &nbsp|&nbsp
           <a style="color:#e77007" href="https://www.linkedin.com/in/loka-li-546385245/"><strong>LinkedIn</strong></a> 
         </p>
         </tbody></table>
