--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <br>
         <strong>Loka Li*</strong>, Ibrahim Aldarmaki*, Minghao Fu, Wong Yu Kang, Yunlong Deng, Qiang Huang, Jing Yang, Jin Tian, Guangyi Chen, Kun Zhang.
         <br>
-        <em>Conference on Neural Information Processing Systems (NeurIPS) Workshop on CauScien: Uncovering Causality in Science, 2025.</em>
+        <em>Neural Information Processing Systems (NeurIPS) Workshop on CauScien: Uncovering Causality in Science, 2025.</em>
       </p>
 
       <p>
@@ -161,7 +161,7 @@
         <br>
         Gongxu Luo, Haoyue Dai, <strong>Loka Li</strong>, Chengqian Gap, Boyang Sun, Kun Zhang.
         <br>
-        <em>Conference on Neural Information Processing Systems (NeurIPS), 2025.</em>
+        <em>Neural Information Processing Systems (NeurIPS), 2025.</em>
         </li>
       </p>
 
@@ -203,7 +203,7 @@
       <br>
       <strong>Loka Li*</strong>, Haoyue Dai*, Hanin Ghothani, Biwei Huang, Jiji Zhang, Shahar Harel, Isaac Bentwich, Guangyi Chen, Kun Zhang.
       <br> 
-      <em>Conference on Neural Information Processing Systems (NeurIPS), 2024.</em> 
+      <em>Neural Information Processing Systems (NeurIPS), 2024.</em> 
       </p>
 
       <p>
@@ -281,14 +281,14 @@
     <h2>Service</h2>
     - Serving as a reviewer for conferences and journals, including: 
     <ul>
-      <p><li>International Conference on Machine Learning (ICML)</li></p>
-      <p><li>Conference on Neural Information Processing Systems (NeurIPS)</li></p>
-      <p><li>International Conference on Learning Representations (ICLR)</li></p>
-      <p><li>Association for the Advancement of Artificial Intelligence Conference (AAAI)</li></p>
-      <p><li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li></p> 
-      <p><li>International Conference on Data Mining (ICDM)</li></p>
-      <p><li>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).</li></p>
-      <p><li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS).</li></p>
+      <p><li>International Conference on Machine Learning (ICML), 2024-2026.</li></p>
+      <p><li>Neural Information Processing Systems (NeurIPS), 2024-2025.</li></p>
+      <p><li>International Conference on Learning Representations (ICLR), 2024-2026.</li></p>
+      <p><li>Association for the Advancement of Artificial Intelligence Conference (AAAI), 2026.</li></p>
+      <p><li>International Conference on Artificial Intelligence and Statistics (AISTATS), 2025-2026.</li></p> 
+      <p><li>International Conference on Data Mining (ICDM), 2024.</li></p>
+      <p><li>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2026.</li></p>
+      <p><li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2024.</li></p>
       <!-- <p><li> Neural Networks (NN).</li></p> -->
     </ul>
 
